--- a/SistemaAcademico/nbproject/project.properties
+++ b/SistemaAcademico/nbproject/project.properties
@@ -35,7 +35,7 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
